Fix overflow issues by limiting blob size on mobile

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -1121,6 +1121,7 @@ select {
 .prose :where(table):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
   width:100%;
   table-layout:auto;
+  text-align:start;
   margin-top:2em;
   margin-bottom:2em;
   font-size:0.875em;
@@ -1161,10 +1162,6 @@ select {
 
 .prose :where(tfoot td):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
   vertical-align:top
-}
-
-.prose :where(th, td):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
-  text-align:start
 }
 
 .prose :where(figure > *):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
@@ -1526,6 +1523,206 @@ select {
 
 .top-\[calc\(100vh-5\.5rem\)\] {
   top:calc(100vh - 5.5rem)
+}
+
+.left-\[10vw\] {
+  left:10vw
+}
+
+.right-\[10vw\] {
+  right:10vw
+}
+
+.right-\[-10vw\] {
+  right:-10vw
+}
+
+.right-\[-20vw\] {
+  right:-20vw
+}
+
+.right-\[-15vw\] {
+  right:-15vw
+}
+
+.left-\[15vw\] {
+  left:15vw
+}
+
+.left-\[5vw\] {
+  left:5vw
+}
+
+.-bottom-80 {
+  bottom:-20rem
+}
+
+.-bottom-0 {
+  bottom:-0px
+}
+
+.-bottom-20 {
+  bottom:-5rem
+}
+
+.left-\[5\] {
+  left:5
+}
+
+.left-10 {
+  left:2.5rem
+}
+
+.left-\[50\] {
+  left:50
+}
+
+.left-\[50vh\] {
+  left:50vh
+}
+
+.left-\[5vh\] {
+  left:5vh
+}
+
+.left-\[10vh\] {
+  left:10vh
+}
+
+.left-\[15vh\] {
+  left:15vh
+}
+
+.right-\[-15vh\] {
+  right:-15vh
+}
+
+.right-\[-10vh\] {
+  right:-10vh
+}
+
+.right-\[-30-vh\] {
+  right:-30-vh
+}
+
+.right-\[-30vh\] {
+  right:-30vh
+}
+
+.right-\[-35vh\] {
+  right:-35vh
+}
+
+.left-\[20vh\] {
+  left:20vh
+}
+
+.left-\[30vh\] {
+  left:30vh
+}
+
+.left-\[35vh\] {
+  left:35vh
+}
+
+.left-\[40vh\] {
+  left:40vh
+}
+
+.right-\[-40vh\] {
+  right:-40vh
+}
+
+.-bottom-\[100vh\] {
+  bottom:-100vh
+}
+
+.-bottom-\[10vh\] {
+  bottom:-10vh
+}
+
+.-bottom-\[15vh\] {
+  bottom:-15vh
+}
+
+.-bottom-\[20vh\] {
+  bottom:-20vh
+}
+
+.-bottom-\[25vh\] {
+  bottom:-25vh
+}
+
+.right-\[-100vh\] {
+  right:-100vh
+}
+
+.right-\[10vh\] {
+  right:10vh
+}
+
+.right-\[5vh\] {
+  right:5vh
+}
+
+.right-\[15vh\] {
+  right:15vh
+}
+
+.right-\[20vh\] {
+  right:20vh
+}
+
+.left-\[100vh\] {
+  left:100vh
+}
+
+.left-\[-10vh\] {
+  left:-10vh
+}
+
+.left-\[-10vw\] {
+  left:-10vw
+}
+
+.left-\[40vw\] {
+  left:40vw
+}
+
+.right-\[-40vw\] {
+  right:-40vw
+}
+
+.left-\[20vw\] {
+  left:20vw
+}
+
+.left-\[60vw\] {
+  left:60vw
+}
+
+.right-\[-50vw\] {
+  right:-50vw
+}
+
+.right-\[-60vw\] {
+  right:-60vw
+}
+
+.right-\[20vw\] {
+  right:20vw
+}
+
+.right-\[40vw\] {
+  right:40vw
+}
+
+.right-\[15vw\] {
+  right:15vw
+}
+
+.right-\[100vw\] {
+  right:100vw
 }
 
 .z-10 {
@@ -1904,6 +2101,14 @@ select {
   height:100vh
 }
 
+.h-32 {
+  height:8rem
+}
+
+.h-40 {
+  height:10rem
+}
+
 .max-h-3 {
   max-height:0.75rem
 }
@@ -1988,6 +2193,19 @@ select {
   width:100vw
 }
 
+.w-fit {
+  width:-moz-fit-content;
+  width:fit-content
+}
+
+.w-32 {
+  width:8rem
+}
+
+.w-40 {
+  width:10rem
+}
+
 .min-w-0 {
   min-width:0px
 }
@@ -2055,6 +2273,10 @@ select {
 
 .max-w-xl {
   max-width:36rem
+}
+
+.max-w-lg {
+  max-width:32rem
 }
 
 .flex-1 {
@@ -2276,6 +2498,14 @@ select {
 
 .overflow-visible {
   overflow:visible
+}
+
+.overflow-x-hidden {
+  overflow-x:hidden
+}
+
+.overflow-x-clip {
+  overflow-x:clip
 }
 
 .overflow-y-scroll {
@@ -5527,8 +5757,20 @@ pre {
     margin-top:4rem
   }
 
+  .sm\:h-32 {
+    height:8rem
+  }
+
   .sm\:w-1\/2 {
     width:50%
+  }
+
+  .sm\:w-full {
+    width:100%
+  }
+
+  .sm\:w-32 {
+    width:8rem
   }
 
   .sm\:grid-cols-2 {
@@ -5601,12 +5843,24 @@ pre {
     height:200px
   }
 
+  .md\:h-72 {
+    height:18rem
+  }
+
   .md\:w-1\/3 {
     width:33.333333%
   }
 
   .md\:w-auto {
     width:auto
+  }
+
+  .md\:w-full {
+    width:100%
+  }
+
+  .md\:w-72 {
+    width:18rem
   }
 
   .md\:grid-cols-3 {
@@ -5706,6 +5960,14 @@ pre {
     width:auto
   }
 
+  .lg\:w-full {
+    width:100%
+  }
+
+  .lg\:w-72 {
+    width:18rem
+  }
+
   .lg\:max-w-7xl {
     max-width:80rem
   }
@@ -5765,8 +6027,100 @@ pre {
 }
 
 @media (min-width: 1280px) {
+  .xl\:right-\[20vh\] {
+    right:20vh
+  }
+
+  .xl\:left-\[20vh\] {
+    left:20vh
+  }
+
+  .xl\:left-\[40vh\] {
+    left:40vh
+  }
+
+  .xl\:right-\[-40vh\] {
+    right:-40vh
+  }
+
+  .xl\:right-\[40vh\] {
+    right:40vh
+  }
+
+  .xl\:right-\[30vh\] {
+    right:30vh
+  }
+
+  .xl\:right-\[25vh\] {
+    right:25vh
+  }
+
+  .xl\:left-\[20vw\] {
+    left:20vw
+  }
+
+  .xl\:left-\[40vw\] {
+    left:40vw
+  }
+
+  .xl\:right-\[25vw\] {
+    right:25vw
+  }
+
+  .xl\:left-\[30vw\] {
+    left:30vw
+  }
+
+  .xl\:left-\[10vw\] {
+    left:10vw
+  }
+
+  .xl\:right-\[10vw\] {
+    right:10vw
+  }
+
+  .xl\:right-\[20vw\] {
+    right:20vw
+  }
+
+  .xl\:left-\[25vw\] {
+    left:25vw
+  }
+
+  .xl\:right-\[100vw\] {
+    right:100vw
+  }
+
+  .xl\:right-\[15vw\] {
+    right:15vw
+  }
+
+  .xl\:right-\[35vw\] {
+    right:35vw
+  }
+
+  .xl\:right-\[5vw\] {
+    right:5vw
+  }
+
+  .xl\:h-72 {
+    height:18rem
+  }
+
   .xl\:w-1\/4 {
     width:25%
+  }
+
+  .xl\:w-full {
+    width:100%
+  }
+
+  .xl\:w-72 {
+    width:18rem
+  }
+
+  .xl\:max-w-full {
+    max-width:100%
   }
 
   .xl\:grid-cols-4 {
